Change the link CSS and img 'alt' attribute

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mama Café Card</title>
-    <link rel="stylesheet" href="Mama Cafe.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/5350312129.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
         <header>
-            <img class="AvocadoImg" src="img/Avocado-Toast-11.jpg" alt="Avocado-Toast-11">
+            <img class="AvocadoImg" src="img/Avocado-Toast-11.jpg" alt="Avocado_Toast_11">
             <div  class="button-container">
-                <button><a href="Mama Web Home.html" target="_blank">JOIN US !</a></button>
+                <button><a href="#" target="_blank">JOIN US !</a></button>
             </div>
         </header>
         <div class="other-container">
