Several changes in tag img

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <img class="AvocadoImg" src="img/Avocado-Toast-11.jpg" alt="Avocado_Toast_11">
+            <img class="AvocadoImg" src="img/Avocado_Toast.jpg" alt="Avocado_Toast">
             <div  class="button-container">
                 <button><a href="#" target="_blank">JOIN US !</a></button>
             </div>
